# fastapi_exp

./: README.md  pyproject.toml  requirements.txt
src/fastapi_exp/: __init__.py  main.py
src/fastapi_exp/conf/: fastapi.cnf.example  fastapi_exp.cnf.example
tests/: test_myprog.py
z_non-python_resources/database/: about_database.md
