[project]
name = "fastapi-exp"
version = "0.1.1"
description = "FastAPI experimental project"
readme = "README.md"
authors = [
    { name = "Ray Doue", email = "rrdoue@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "environs>=14.5.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.118.3",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.27",
]

[project.scripts]
fastapi-exp = "fastapi_exp:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.build-backend]
source-exclude = [
    "src/fastapi_exp/conf/fastapi_exp.cnf"
    "client/Gne_HR_Sample.zip"
]

[[tool.uv.index]]
name = "test_pypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

